<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:id="@+id/main_fragmentcontainer">

    <Button
        android:text="View transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_transactions_btn"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/send_money_btn"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:text="Send money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_money_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:text="View balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_balance_btn"
        app:layout_constraintTop_toBottomOf="@+id/send_money_btn"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:text="Navigation Drawer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_drawer"
        app:layout_constraintTop_toBottomOf="@+id/view_balance_btn"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>