...
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.navigationcompodemo.MainFragment"
        android:label="fragment_main"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_viewTransactionFragment"
            app:destination="@id/viewTransactionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_mainFragment_to_chooseRecipientFragment"
            app:destination="@id/chooseRecipientFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
            <!--app:popUpTo="@id/mainFragment"
...
